--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,8 @@
-# The deployment section should be excluded until
-# it is explicitly included in module 5
-
-#deployment:
-#  dockerhub:
-#    branch: master
-#    commands:
-#      - $DOCKER_HUB_TRIGGER
-
-test:
-  override:    
-    - mocha
+version: 2.1
+jobs:
+  build:
+    docker: 
+      - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
+    steps:
+      - checkout # check out the code in the project directory
+      - run: echo "hello world" # run the `echo` command
